testsuite/tests/checks/improper_returns/test.out
ret.adb:6:10: error: extra return statement
6 |          return;                          --  FLAG
  |          ^^^^^^^ 

ret.adb:17:10: error: extra return statement
17 |          return I * Factorial (I - 1);    --  FLAG
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

ret.adb:21:10: error: extra return statement
21 |          return Natural'Last;             --  FLAG
   |          ^^^^^^^^^^^^^^^^^^^^ 

